<resources>
    <string name="app_name">Chess Recorder</string>
    <string name="btn_start_text">Start Recording</string>

    <string name="title_activity_recording">RecordingActivity</string>
    <string name="camera_feed_alt_text">Picture from the camera</string>
    <string name="draw">Draw</string>
    <string name="unknown">Unknown</string>
    <string name="winner">Winner</string>
    <string name="notes">Notes</string>
    <string name="pgn">Portable Game Notation (PGN)</string>
    <string name="game_title">Game title</string>
    <string name="white_player">White player</string>
    <string name="black_player">Black player</string>
    <string name="save_game">Save Game</string>
    <string name="cancel">Cancel</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="picture">Image</string>
    <string name="delete">Delete</string>
    <string name="delete_game_prompt">Are you sure you want to delete this recording?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_deleted">Recording succesfully deleted.</string>
    <string name="game_delete_error">Error while deleting recording.</string>
    <string name="help_title_main">Application usage</string>
    <string name="help_title_recording">How to record</string>
    <string name="help_title_position">Device position</string>
    <string name="help_title_detection">Chessboard detection</string>
    <string name="help_text_recording"></string>
    <string name="help_text_position"></string>
    <string name="help_text_detection"></string>
    <string name="some_text">
        <![CDATA[

        aaaaaaaaaaaaaaaaaaajfasdlkfjaweoifjweopgijwreoiprbjweropibjeroipbjopbijerbopfejboperbjrpeoibjreopibjropibjwropibjwrpoibqjwr
        aaaaaaaaaaddddaaaaaaaaajfasdlkfjaweoifjweopgijwreoiprbjweropibjeroipbjopbijerbopfejboperbjrpeoibjreopibjropibjwropibjwrpoibqjwr
        aaaaaaaaaaaaaaaaaaajfasdlkfjaweoifjweopgijwreoiprbjweropibjeroipbjopbijerbopfejboperbjrpeoibjreopibjropibjwropibjwrpoibqjwr
        aaaaaaaaaaaaaaaaaaajfasdlkfjaweoifjweopgijwreoiprbjweropibjeroipbjopbijerbopfejboperbjrpeoibjreopibjropibjwropibjwrpoibqjwr
        aaaaaaaaaaaaaaaaaaajfasdlkfjaweoifjweopgijwreoiprbjweropibjeroipbjopbijerbopfejboperbjrpeoibjreopibjropibjwropibjwrpoibqjwr
        aaaaaaaaaaaaaaaaaaajfasdlkfjaweoifjweopgijwreoiprbjweropibjeroipbjopbijerbopfejboperbjrpeoibjreopibjropibjwropibjwrpoibqjwr

        ]]>
    </string>

</resources>
